Use external currency exchange rate to convert prices